; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/net80211/wlanwds/extr_wlanwds.c_getparent.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/net80211/wlanwds/extr_wlanwds.c_getparent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IFNAMSIZ = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"net.wlan.%s.%%parent\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @getparent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getparent(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca [256 x i8], align 16
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i64, i64* @IFNAMSIZ, align 8
  %9 = add i64 %8, 1
  %10 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %11 = load i8*, i8** %4, align 8
  %12 = getelementptr inbounds i8, i8* %11, i64 4
  %13 = call i32 @snprintf(i8* %10, i32 256, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %12)
  %14 = load i64, i64* @IFNAMSIZ, align 8
  store i64 %14, i64* %7, align 8
  %15 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %16 = load i8*, i8** %5, align 8
  %17 = call i64 @sysctlbyname(i8* %15, i8* %16, i64* %7, i32* null, i32 0)
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %24

20:                                               ; preds = %2
  %21 = load i8*, i8** %5, align 8
  %22 = load i64, i64* %7, align 8
  %23 = getelementptr inbounds i8, i8* %21, i64 %22
  store i8 0, i8* %23, align 1
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %20, %19
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i64 @sysctlbyname(i8*, i8*, i64*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
